# gb_pypatterns

./: LICENSE  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  run.py  settings.py
data/: create_db.sql  py_patterns.sqlite
simple_site_app/: middleware.py  router.py  views.py
simple_site_app/templates/: about.html  add_student_to_course.html  create_category.html  create_course.html  create_student.html  edit_course.html  index.html  list_categories.html  list_courses.html  list_programs.html  list_students.html  page.html
simple_site_app/templates/include/: categories.html  courses.html  students.html
templates/: about.html  base.html  not_found.html
templates/include/: footer.html  logo.html  menu.html  sidebar.html
wsgi_framework/: application.py  builtin_middleware.py  commands.py  config.py  engine.py  front_controller.py  logger.py  main.py  requests_parser.py  router.py  templator.py
wsgi_framework/architectural_system_patterns/: category_mapper.py  course_mapper.py  create_db.py  data_mapper.py  data_mappers.py  db_exceptions.py  domain_object.py  mapper_registry.py  models.py  student_mapper.py  unit_or_work.py
wsgi_framework/behavioral_patterns/: observer.py  serializer.py  strategy.py  template_method.py
wsgi_framework/creational_patterns/: category.py  constants.py  courses.py  engine.py  logger.py  singleton.py  users.py
wsgi_framework/structural_patterns/: decorators.py
