[tool.poetry]
name = "gb_pypatterns"
version = "0.1.0"
description = ""
authors = ["DashViolin <mymail@srv.org>"]

[tool.poetry.dependencies]
python = "^3.10"
uWSGI = "^2.0.21"
Jinja2 = "^3.1.2"
jsonpickle = "^3.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
